THRIFT-5186: Don't pass AI_ADDRCONFIG to getaddrinfo()

If a host doesn't have assigned IPv4 or IPv6 addresses, thrift communication
over localhost-only is impossible due to thrift library bug. It happens
when making getaddrinfo syscall with AI_ADDRCONFIG flag.

From man getaddrinfo(3):
If  hints.ai_flags  includes  the  AI_ADDRCONFIG  flag,  then  IPv4  addresses
are returned in the list pointed to by res only if the local system has at least
one IPv4 address configured, and IPv6 addresses are returned only if the local
system has at least one IPv6 address configured.  The loopback address is not
considered for this case as valid as a configured address.

Upstream bug with AI_ADDRCONFIG ai_flags was fixed for cpp library and win32
platform only. See https://issues.apache.org/jira/browse/THRIFT-2539

Patch based on Thrift 0.13.0, commit cecee50308fc7e6f77f55b3fd906c1c6c471fa2f.

Languages: cpp,pas,py